# ChangeLog for perl-core/Compress-Raw-Bzip2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Bzip2/ChangeLog,v 1.3 2009/05/05 14:09:39 tove Exp $

  05 May 2009; Torsten Veller <tove@gentoo.org>
  Compress-Raw-Bzip2-2.019.ebuild:
  Add ~mips (#268615)

*Compress-Raw-Bzip2-2.019 (04 May 2009)

  04 May 2009; Torsten Veller <tove@gentoo.org>
  -Compress-Raw-Bzip2-2.017.ebuild, +Compress-Raw-Bzip2-2.019.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.017 (18 Apr 2009)

  18 Apr 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Compress-Raw-Bzip2-2.015.ebuild, +Compress-Raw-Bzip2-2.017.ebuild:
  Move dev-perl/Compress-Raw-Bzip2 -> perl-core/Compress-Raw-Bzip2. Version
  bump

  10 Dec 2008; Alexis Ballier <aballier@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  keyword ~sparc-fbsd

  04 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  Add arm/s390/sh love.

  27 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  keyword ~x86-fbsd

  23 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  ppc stable, bug #192989

  23 Oct 2008; Raúl Porcel <armin76@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  alpha/ia64/x86 stable wrt #192989

  22 Oct 2008; Guy Martin <gmsoft@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  hppa stable, #192989

  21 Oct 2008; Markus Rothe <corsair@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  Stable on ppc64; bug #192989

  21 Oct 2008; Tobias Heinlein <keytoaster@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  Keyworded and stable for amd64, security bug #192989

  20 Oct 2008; Friedrich Oslage <bluebird@gentoo.org>
  Compress-Raw-Bzip2-2.015.ebuild:
  Keyworded and stable for sparc, security bug #192989

*Compress-Raw-Bzip2-2.015 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Compress-Raw-Bzip2-2.015.ebuild: