@@ -1,6 +1,8 @@
 DIST Compress-Raw-Bzip2-2.015.tar.gz 140877 RMD160 3cea35cc1fb50f686dc57b9078a43923439e8316 SHA1 2cbaefa920bca357ae85519a60292f7d741c5b6a SHA256 77722bd7a4f7013884acc33f5a0ca827e8fd57d00716a479425294120f4f8465
 DIST Compress-Raw-Bzip2-2.019.tar.gz 144665 RMD160 4f35f60b4fc6ca7bfa9e6e397bbeba4c066c895a SHA1 e59c1b82b6bcd5ce0975f35249dd5e2a4f366f34 SHA256 7eb6405464ee5d06e331e3e26c3e570089e81829eb3411776aaf3e0546857293
+DIST Compress-Raw-Bzip2-2.020.tar.gz 144702 RMD160 360a371da300323568d0ed21dc040be5efef19ac SHA1 35f48505d91b0785ba5fb608962114d04245d654 SHA256 791382ac87ef5a80e2a05626a10d976a7d0ab0e63e7ab999039a0cf0480b25ff
 EBUILD Compress-Raw-Bzip2-2.015.ebuild 648 RMD160 829ecf0a28ebf732eb4358625fd73c7d08599233 SHA1 27dc5c529a4aa2b9e969e3dbdf36268bfee5b318 SHA256 1f9fdaea078e70af59313517d195522b4ebc66e073eec883d423923fa408fe71
 EBUILD Compress-Raw-Bzip2-2.019.ebuild 648 RMD160 4dbf9d04e1c24e2f9b48d6d7f34edffd411476a4 SHA1 c8fff02ec3e60d61021c80dcfa7661169c477530 SHA256 f7330dd579e0b85d15037cf77863694156b095e780c136e4fe57bd259af8f6d0
-MISC ChangeLog 2003 RMD160 957abd972c613a1abae0ac5fafbfffc381402084 SHA1 9e98a36cee6938df182ccebe13422260bfc9aac0 SHA256 54952a7226923240e9c1fa5e95e270763166cfcac2382a72389a40d6912992f3
+EBUILD Compress-Raw-Bzip2-2.020.ebuild 613 RMD160 eee1ba400bc83df85b2f281853448fb08e635142 SHA1 69a62acbf97f82656948f70a364381d8038ba0f7 SHA256 ed466066e9582ed318c529c91a99b1cd23f477a4fd3b5284850b9dbecc936f8f
+MISC ChangeLog 2144 RMD160 bb8a9fa00967b56b65e5e3aba3f83f50479b1122 SHA1 079c4b77d635be07b68c6963fb29be106f07e190 SHA256 f0b7879d90ffd9d971b15a167a22c25bc0484cb30eb9e45670368bf43c1d3f00
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
