@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/Compress-Raw-Bzip2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Bzip2/ChangeLog,v 1.3 2009/05/05 14:09:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Bzip2/ChangeLog,v 1.4 2009/06/03 22:26:04 tove Exp $
+
+*Compress-Raw-Bzip2-2.020 (03 Jun 2009)
+
+  03 Jun 2009; Torsten Veller <tove@gentoo.org>
+  +Compress-Raw-Bzip2-2.020.ebuild:
+  Version bump
 
   05 May 2009; Torsten Veller <tove@gentoo.org>
   Compress-Raw-Bzip2-2.019.ebuild:
